revised swagger files
