# docs/swagger.json
@@ -1,8 +1,16 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is a server for MyGram Application.",
+        "title": "MyGram API",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "Swagger API Team"
+        },
+        "version": "1.0"
     },
+    "host": "https://final-project-2-production-1503.up.railway.app",
+    "basePath": "/",
     "paths": {
         "/": {
             "get": {
@@ -316,7 +324,7 @@
                 }
             }
         },
-        "/photo": {
+        "/photos": {
             "post": {
                 "description": "Create a photo by json",
                 "consumes": [
@@ -326,7 +334,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "photo"
+                    "photos"
                 ],
                 "summary": "Create a photo",
                 "parameters": [
@@ -355,6 +363,53 @@
                     },
                     "422": {
                         "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/errs.MessageErrData"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/errs.MessageErrData"
+                        }
+                    }
+                }
+            }
+        },
+        "/photos/{photoID}": {
+            "delete": {
+                "description": "Delete a specific photo by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "photos"
+                ],
+                "summary": "Delete a photo",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Photo ID",
+                        "name": "photoID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.DeletePhotoResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errs.MessageErrData"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/errs.MessageErrData"
                         }
@@ -842,6 +897,15 @@
             "type": "object",
             "properties": {
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.DeletePhotoResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "description": "Message indicating whether or not the photo was deleted",
                     "type": "string"
                 }
             }
